--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,1 +1,12 @@
 /* style sheet for mobile devices */
+@media screen and (max-width: 384px) {
+
+}
+
+@media screen and (orientation:portrait) {
+
+}
+
+@media screen and (orientation:landscape) {
+
+}
