--- a/styles/style.css
+++ b/styles/style.css
@@ -17,23 +17,23 @@
 }
 
 body {
-  margin:0;
-  padding:0;
+  padding: 0;
+  margin: 0;
   font-family: 'SV Basic Manual', Unispace, monospace;
 }
 .container {
-  overflow:hidden;
   width:860px;
   padding: 50px;
+  overflow:hidden;
 }
 
 /* html border of the entire application */ 
-div#calculator {
-	margin: 0 auto;
-  margin-top: 50px;
+#calculator {
 	width: 400px;
 	height: 710px;
 	padding: 10px;
+	margin: 0 auto;
+  margin-top: 50px;
 	border: 2px solid black;
   border-collapse: separate;
   border-spacing: 8px;
@@ -44,72 +44,73 @@ div#calculator {
 }
 
 /* where to write output */
-div#display {
+#display {
 	width: 100%;
 	height: 108px;
-	border: 1px solid black;
-  font-family: 'Calculator', monospace;
-  line-height: 108px;
-  font-size:100px;
-  vertical-align: text-top;
-  text-align: right;
-  white-space: nowrap;
   overflow: hidden;
+  font-family: 'Calculator', monospace;
+  font-size:100px;
+  line-height: 108px;
+  text-align: right;
   text-overflow: ellipsis;
+  white-space: nowrap;
+  vertical-align: text-top;
+	border: 1px solid black;
 }
 
-div.button {
+.button {
+  position: relative;
+  display: table-cell;
   width:88px;
   height:108px;
-  border: 1px solid black;
   text-align: center;
-  display: table-cell;
-  position: relative;
+  border: 1px solid black;
 }
 
-div.button span {
-  line-height: 108px;
-	font-size: 2.8em;
+.button span {
   font-family: Unispace, 'SV Basic Manual', monospace;
+	font-size: 2.8em;
+  line-height: 108px;
 }
 
 /*all single digits*/
-div.nums {
+.nums {
   background-color:#ccc;
 }
 
 /* + - * / = clear */
-div.operation {
+.operation {
   background-color:#808080;
 }
 
-div.clickActive {
-  background-color: black; 
+.clickActive {
   color: white;
+  background-color: black; 
 }
 
 /* clr button and equals button */
-div.util {
+.util {
   background-color: #3f3f3f;
   
 }
+
 .help {
-  outline: 2px dotted red;
-  background: green;
   position: absolute;
   top: -15px;
-  height: 54px;
   width: 44px;
+  height: 54px;
   font-style: italic;
+  background: green;
+  outline: 2px dotted red;
 }
 
 h4 {
-  text-align:right;
   font-family: 'SV Basic Manual';
+  text-align:right;
 }
 
 p {
   margin-top: 20px;
-  font-size: .75em;
   font-family: 'SV Basic Manual';
+  font-size: .75em;
 }
