--- a/dev/less/calc.less
+++ b/dev/less/calc.less
@@ -17,7 +17,7 @@
 	width: 100%;
 	height: 108px;
   overflow: hidden;
-  font-family: 'Calculator', monospace;
+  //font-family: calculator, monospace;
   font-size:100px;
   line-height: 108px;
   text-align: right;
@@ -37,7 +37,7 @@
 }
 
 .button span {
-  font-family: Unispace, 'SV Basic Manual', monospace;
+  //font-family: @svb;
 	font-size: 2.8em;
   line-height: 108px;
 }
