remove dev/less/main.less, adjust Gruntfile

--- a/dev/less/styles.less
+++ b/dev/less/styles.less
@@ -1,14 +1,17 @@
-@svb: 'sv-basic-manual', 'Arial';
-@unispace: 'unispace', 'Georgia';
-@calculator: 'calculator', 'Mobilize BRK';
+@svb: 'sv-basic-manual';
+@unispace: 'unispace';
+@calculator: 'calculator';
+
 @arial: 'arial';
 @times: 'Times New Roman';
 @mob: 'Mobilize BRK';
+@courier-new: 'Courier New';
+@monospace: 'monospace';
 
 body {
   padding: 0;
   margin: 0;
-  font-family: @unispace;
+  font-family: @svb;
 }
 
 .container {
@@ -18,13 +21,11 @@ body {
 }
 
 h4 {
-  //font-family: @svb;
   text-align:right;
 }
 
 p {
   margin-top: 20px;
-  //font-family: @svb;
   font-size: .75em;
 }
 
