--- a/dev/less/calc.less
+++ b/dev/less/calc.less
@@ -1,3 +1,6 @@
+@calculator: 'calculator';
+@unispace: 'unispace';
+
 #calculator {
 	width: 400px;
 	height: 710px;
@@ -17,7 +20,7 @@
 	width: 100%;
 	height: 108px;
   overflow: hidden;
-  //font-family: calculator, monospace;
+  font-family: @calculator, monospace;
   font-size:100px;
   line-height: 108px;
   text-align: right;
@@ -37,7 +40,7 @@
 }
 
 .button span {
-  //font-family: @svb;
+  font-family: @unispace;
 	font-size: 2.8em;
   line-height: 108px;
 }
