--- a/pub/styles/styles.css
+++ b/pub/styles/styles.css
@@ -16,7 +16,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: 'unispace', 'Georgia';
+  font-family: 'sv-basic-manual';
 }
 
 .container {
@@ -67,6 +67,7 @@ p {
   width: 100%;
   height: 108px;
   overflow: hidden;
+  font-family: 'calculator', monospace;
   font-size: 100px;
   line-height: 108px;
   text-align: right;
@@ -86,6 +87,7 @@ p {
 }
 
 .button span {
+  font-family: 'unispace';
   font-size: 2.8em;
   line-height: 108px;
 }
