--- a/dev/less/responsive.less
+++ b/dev/less/responsive.less
@@ -1,5 +1,12 @@
-@media (max-width: 540px) {
+@import 'variables.less';
 
+@media (max-width: 540px) {
+  html {
+    font-size: @mobile-font-size; 
+  }
+  #calculator {
+
+  }
 }
 
 @media (max-height: 400px) {
