--- a/dev/less/styles.less
+++ b/dev/less/styles.less
@@ -1,12 +1,8 @@
-@svb: 'sv-basic-manual';
-@unispace: 'unispace';
-@calculator: 'calculator';
+@import 'variables.less';
 
-@arial: 'arial';
-@times: 'Times New Roman';
-@mob: 'Mobilize BRK';
-@courier-new: 'Courier New';
-@monospace: 'monospace';
+html {
+  font-size: @base-font-size;
+}
 
 body {
   padding: 0;
@@ -15,8 +11,8 @@ body {
 }
 
 .container {
-  width:860px;
-  padding: 50px;
+  width: 100%;
+  padding: 2.8rem;
   overflow:hidden;
 }
 
@@ -25,15 +21,15 @@ h4 {
 }
 
 p {
-  margin-top: 20px;
+  margin-top: 1.1rem;
   font-size: .75em;
 }
 
 .help {
   position: absolute;
-  top: -15px;
-  width: 44px;
-  height: 54px;
+  top: -0.75rem;
+  width: 2.45rem;
+  height: 3rem;
   font-style: italic;
   background: green;
   outline: 2px dotted red;
