--- a/dev/less/variables.less
+++ b/dev/less/variables.less
@@ -1,5 +1,6 @@
 @base-font-size: 18px;
 @mobile-font-size: 22px;
+
 @font-base-url: './fonts';
 
 @font-face {
@@ -34,3 +35,17 @@
        url('@{font-url}\.ttf') format('truetype'),
        url('@{font-url}\.svg#svgFontName') format('svg');
 }
+
+@svb: 'sv-basic-manual';
+@unispace: 'unispace';
+@calculator: 'calculator';
+
+@arial: 'arial';
+@times: 'Times New Roman';
+@mob: 'Mobilize BRK';
+@courier-new: 'Courier New';
+@monospace: 'monospace';
+
+@grey: #808080;
+@lighter-grey: #CCC;
+@darker-grey: #3F3F3F;
