tweak font sizes for mobile portrait

--- a/dev/less/_styles.less
+++ b/dev/less/_styles.less
@@ -5,17 +5,20 @@ html {
 }
 
 body {
-  padding: 0;
+  padding: 2.8rem;
   margin: 0;
   font-family: @svb;
 }
 
-.container {
+#container {
   width: 100%;
-  padding: 2.8rem;
   overflow:hidden;
 }
 
+.info {
+  width: @main-width;
+  margin: 1rem auto;
+}
 h4 {
   text-align:right;
 }
