--- a/dev/less/calc.less
+++ b/dev/less/calc.less
@@ -1,14 +1,19 @@
 @import 'variables.less';
 
 #calculator {
-	width: 22.2rem;
+  width: @main-width;
 	height: 39.4rem;
-	padding: 0.5rem;
+  padding: 0.5rem;
 	margin: 0 auto;
-  margin-top: 50px;
+ 	font-size: 2.8em;
 	border: 2px solid black;
   border-collapse: separate;
   border-spacing: 0.5rem;
+
+  & > div {
+    width: 100%; 
+    //outline: 2px dashed blue;
+  }
 }
 
 #row1, #row2, #row3, #row4, #row5 {
@@ -16,7 +21,6 @@
 }
 
 #display {
-	width: 100%;
 	height: 6rem;
   overflow: hidden;
   font-family: @calculator, monospace;
@@ -36,29 +40,30 @@
   height: 6rem;
   text-align: center;
   border: 1px solid black;
+
+  // text inside of any button
+  & span {
+    font-family: @unispace;
+    line-height: 6rem;
+  }
 }
 
-.button span {
-  font-family: @unispace;
-	font-size: 2.8em;
-  line-height: 6rem;
-}
-
-.nums {
+// any number
+&.nums {
   background-color: @lighter-grey;
 }
 
 // addition, subtraction, multiplication, division, equals, clear
-.operation {
+&.operation {
   background-color: @grey;
 }
 
-.clickActive {
+&.clickActive {
   color: white;
   background-color: black; 
 }
 
 // clr button and equals button
-.util {
+&.util {
   background-color: @darker-grey;
 }
