refine & refactor landscape draw

--- a/dev/less/calc.less
+++ b/dev/less/calc.less
@@ -107,3 +107,9 @@
 .util {
   background-color: @darker-grey;
 }
+
+#equals.lastButton {
+  //background-color: green;
+  //outline: 2px dotted orange;
+  //width: 50%;  
+}
