implement table generating script

--- a/dev/less/calc.less
+++ b/dev/less/calc.less
@@ -108,8 +108,7 @@
   background-color: @darker-grey;
 }
 
-#equals.lastButton {
-  //background-color: green;
-  //outline: 2px dotted orange;
-  //width: 50%;  
+td.lastButton {
+  colspan: 2;
+  background-color: red;
 }
