update mobile portrait and landscape styles

--- a/dev/less/calc.less
+++ b/dev/less/calc.less
@@ -21,6 +21,13 @@
     margin: 0 auto;
     font-size: 1.3rem;
   }
+  //@media (orientation: portrait) {
+  //  background-color: red; 
+  //}
+
+  //@media (orientation: landscape) {
+  //  background-color: green; 
+  //}
 }
 
 #row1, #row2, #row3, #row4, #row5 {
