--- a/dev/less/styles.less
+++ b/dev/less/styles.less
@@ -1,4 +1,4 @@
-@import 'variables.less';
+@import (reference) "variables.less";
 
 html {
   font-size: @base-font-size;
@@ -18,8 +18,9 @@ body {
   }
 }
 
-#container {
+.container {
   width: 100%;
+  //background-color: @background-color;
   //overflow:hidden;
 }
 
