--- a/dev/less/variables.less
+++ b/dev/less/variables.less
@@ -46,8 +46,10 @@
 @courier-new: 'Courier New';
 @monospace: 'monospace';
 
+//@background-color: #E3D2A8;
+@calculator-color: #D5D9C3;
 @grey: #808080;
-@lighter-grey: #CCC;
+@lighter-grey: #B8B8B8;
 @darker-grey: #3F3F3F;
 
 @main-width: 22.22rem;
