--- a/pub/styles/styles.css
+++ b/pub/styles/styles.css
@@ -1,218 +1,1 @@
-@font-face {
-  font-family: 'sv-basic-manual';
-  src: url('./fonts/sv-basic-manual/sv-basic-manual\.eot?#iefix') format('embedded-opentype'), url('./fonts/sv-basic-manual/sv-basic-manual\.woff') format('woff'), url('./fonts/sv-basic-manual/sv-basic-manual\.ttf') format('truetype'), url('./fonts/sv-basic-manual/sv-basic-manual\.svg#svgFontName') format('svg');
-}
-
-@font-face {
-  font-family: 'unispace';
-  src: url('./fonts/unispace/unispace\.eot?#iefix') format('embedded-opentype'), url('./fonts/unispace/unispace\.woff') format('woff'), url('./fonts/unispace/unispace\.ttf') format('truetype'), url('./fonts/unispace/unispace\.svg#svgFontName') format('svg');
-}
-
-@font-face {
-  font-family: 'calculator';
-  src: url('./fonts/calculator/calculator\.eot?#iefix') format('embedded-opentype'), url('./fonts/calculator/calculator\.woff') format('woff'), url('./fonts/calculator/calculator\.ttf') format('truetype'), url('./fonts/calculator/calculator\.svg#svgFontName') format('svg');
-}
-
-html {
-  font-size: 18px;
-}
-
-@media (max-width: 540px) and (orientation: portrait), (max-height: 448px) and (orientation: landscape) {
-  html {
-    font-size: 22px;
-  }
-}
-
-body {
-  padding: 2.8rem;
-  margin: 0;
-  font-family: 'sv-basic-manual';
-}
-
-@media (max-width: 540px) and (orientation: portrait), (max-height: 448px) and (orientation: landscape) {
-  body {
-    padding: 0.5rem;
-  }
-}
-
-#container {
-  width: 100%;
-}
-
-.info {
-  width: 22.22rem;
-  margin: 1rem auto;
-}
-
-@media (max-width: 540px) and (orientation: portrait), (max-height: 448px) and (orientation: landscape) {
-  .info {
-    width: 90%;
-  }
-}
-
-h4 {
-  text-align: right;
-}
-
-p {
-  margin-top: 1.1rem;
-  font-size: .75em;
-}
-
-.help {
-  position: absolute;
-  top: -0.75rem;
-  width: 2.45rem;
-  height: 3rem;
-  font-style: italic;
-  background: green;
-  outline: 2px dotted red;
-}
-
-@font-face {
-  font-family: 'sv-basic-manual';
-  src: url('./fonts/sv-basic-manual/sv-basic-manual\.eot?#iefix') format('embedded-opentype'), url('./fonts/sv-basic-manual/sv-basic-manual\.woff') format('woff'), url('./fonts/sv-basic-manual/sv-basic-manual\.ttf') format('truetype'), url('./fonts/sv-basic-manual/sv-basic-manual\.svg#svgFontName') format('svg');
-}
-
-@font-face {
-  font-family: 'unispace';
-  src: url('./fonts/unispace/unispace\.eot?#iefix') format('embedded-opentype'), url('./fonts/unispace/unispace\.woff') format('woff'), url('./fonts/unispace/unispace\.ttf') format('truetype'), url('./fonts/unispace/unispace\.svg#svgFontName') format('svg');
-}
-
-@font-face {
-  font-family: 'calculator';
-  src: url('./fonts/calculator/calculator\.eot?#iefix') format('embedded-opentype'), url('./fonts/calculator/calculator\.woff') format('woff'), url('./fonts/calculator/calculator\.ttf') format('truetype'), url('./fonts/calculator/calculator\.svg#svgFontName') format('svg');
-}
-
-#calculator {
-  width: 22.22rem;
-  height: 39.4rem;
-  padding: 0.5rem;
-  margin: 0 auto;
-  font-size: 2.8em;
-  border: 2px solid black;
-  border-collapse: separate;
-  border-spacing: 0.5rem;
-}
-
-#calculator > div {
-  width: 100%;
-}
-
-@media (max-width: 540px) and (orientation: portrait), (max-height: 448px) and (orientation: landscape) {
-  #calculator {
-    width: 96%;
-    height: 80%;
-    margin: 0 auto;
-    font-size: 1.3rem;
-  }
-}
-
-#row1,
-#row2,
-#row3,
-#row4,
-#row5 {
-  display: table-row;
-}
-
-#display {
-  height: 6rem;
-  overflow: hidden;
-  font-family: 'calculator', monospace;
-  font-size: 5.5rem;
-  line-height: 6rem;
-  text-align: right;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  vertical-align: text-top;
-  border: 1px solid black;
-}
-
-@media (max-width: 540px) and (orientation: portrait), (max-height: 448px) and (orientation: landscape) {
-  #display {
-    height: 3rem;
-    font-size: 2rem;
-    line-height: 3rem;
-  }
-}
-
-.button {
-  position: relative;
-  display: table-cell;
-  width: 4.9rem;
-  height: 6rem;
-  text-align: center;
-  border: 1px solid black;
-}
-
-@media (max-width: 540px) and (orientation: portrait) {
-  .button {
-    height: 25%;
-    padding: 0.5rem;
-  }
-}
-
-@media (max-height: 448px) and (orientation: landscape) {
-  .button {
-    height: inherit;
-  }
-}
-
-.button span {
-  font-family: 'unispace';
-  line-height: 6rem;
-}
-
-@media (max-width: 540px) and (orientation: portrait) {
-  .button span {
-    line-height: 3rem;
-    vertical-align: middle;
-  }
-}
-
-@media (max-height: 448px) and (orientation: landscape) {
-  .button span {
-    line-height: 3rem;
-  }
-}
-
-.nums {
-  background-color: #cccccc;
-}
-
-.operation {
-  background-color: #808080;
-}
-
-.clickActive {
-  color: white;
-  background-color: black;
-}
-
-.util {
-  background-color: #3f3f3f;
-}
-
-@media (max-width: 540px) {
-  
-}
-
-@media (max-height: 400px) {
-  
-}
-
-@font-face {
-  font-family: 'sv-basic-manual';
-  src: url('./fonts/sv-basic-manual/sv-basic-manual\.eot?#iefix') format('embedded-opentype'), url('./fonts/sv-basic-manual/sv-basic-manual\.woff') format('woff'), url('./fonts/sv-basic-manual/sv-basic-manual\.ttf') format('truetype'), url('./fonts/sv-basic-manual/sv-basic-manual\.svg#svgFontName') format('svg');
-}
-
-@font-face {
-  font-family: 'unispace';
-  src: url('./fonts/unispace/unispace\.eot?#iefix') format('embedded-opentype'), url('./fonts/unispace/unispace\.woff') format('woff'), url('./fonts/unispace/unispace\.ttf') format('truetype'), url('./fonts/unispace/unispace\.svg#svgFontName') format('svg');
-}
-
-@font-face {
-  font-family: 'calculator';
-  src: url('./fonts/calculator/calculator\.eot?#iefix') format('embedded-opentype'), url('./fonts/calculator/calculator\.woff') format('woff'), url('./fonts/calculator/calculator\.ttf') format('truetype'), url('./fonts/calculator/calculator\.svg#svgFontName') format('svg');
-}
+@font-face{font-family:sv-basic-manual;src:url(fonts/sv-basic-manual/sv-basic-manual\.eot?#iefix) format('embedded-opentype'),url(fonts/sv-basic-manual/sv-basic-manual\.woff) format('woff'),url(fonts/sv-basic-manual/sv-basic-manual\.ttf) format('truetype'),url(fonts/sv-basic-manual/sv-basic-manual\.svg#svgFontName) format('svg')}@font-face{font-family:unispace;src:url(fonts/unispace/unispace\.eot?#iefix) format('embedded-opentype'),url(fonts/unispace/unispace\.woff) format('woff'),url(fonts/unispace/unispace\.ttf) format('truetype'),url(fonts/unispace/unispace\.svg#svgFontName) format('svg')}@font-face{font-family:calculator;src:url(fonts/calculator/calculator\.eot?#iefix) format('embedded-opentype'),url(fonts/calculator/calculator\.woff) format('woff'),url(fonts/calculator/calculator\.ttf) format('truetype'),url(fonts/calculator/calculator\.svg#svgFontName) format('svg')}html{font-size:18px}@media (max-width:540px) and (orientation:portrait),(max-height:448px) and (orientation:landscape){html{font-size:22px}}body{padding:2.8rem;margin:0;font-family:sv-basic-manual}@media (max-width:540px) and (orientation:portrait),(max-height:448px) and (orientation:landscape){body{padding:.5rem}}.container{width:100%}.info{width:22.22rem;margin:1rem auto}@media (max-width:540px) and (orientation:portrait),(max-height:448px) and (orientation:landscape){.info{width:90%}}h4{text-align:right}p{margin-top:1.1rem;font-size:.75em}.help{position:absolute;top:-.75rem;width:2.45rem;height:3rem;font-style:italic;background:green;outline:2px dotted red}.calculator{width:22.22rem;height:39.4rem;padding:.5rem;margin:0 auto;font-size:2.8em;background-color:#d5d9c3;border-collapse:separate;border-spacing:.5rem;border-radius:1rem}.calculator>div{width:100%}@media (max-width:540px) and (orientation:portrait),(max-height:448px) and (orientation:landscape){.calculator{width:96%;height:80%;margin:0 auto;font-size:1.3rem}}.row1,.row2,.row3,.row4,.row5{display:table-row}.display{height:6rem;overflow:hidden;font-family:calculator,monospace;font-size:5.5rem;line-height:6rem;text-align:right;text-overflow:ellipsis;white-space:nowrap;vertical-align:text-top;background-color:#fff;border-radius:.5rem}@media (max-width:540px) and (orientation:portrait),(max-height:448px) and (orientation:landscape){.display{font-size:2rem;height:3rem;line-height:3rem}}.button{position:relative;display:table-cell;width:4.9rem;height:6rem;text-align:center;border-radius:.5rem}@media (max-width:540px) and (orientation:portrait){.button{height:25%;padding:.5rem}}@media (max-height:448px) and (orientation:landscape){.button{height:inherit}}.button span{font-family:unispace;line-height:6rem}@media (max-width:540px) and (orientation:portrait){.button span{line-height:3rem;vertical-align:middle}}@media (max-height:448px) and (orientation:landscape){.button span{line-height:3rem}}.nums{background-color:#b8b8b8}.operation{background-color:gray}.clickActive{color:#fff;background-color:#000}.util{background-color:#3f3f3f}
